--- a/styles/style.css
+++ b/styles/style.css
@@ -62,5 +62,9 @@
   .featured-image img{
     width: 100%;
     left: auto;
+  }
+  .featured-heading h1{
+    font-size: 40px;
+    width: 100%;
   }    
 }
