--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
   --------------*/
  body{
      font-family: 'Poppins', sans-serif;
+     background-color: #FFFFFF;
  }
  /*------------------ 
     Featured Section
@@ -15,6 +16,7 @@
  .featured-section{
      display: flex;
      background-color: #2D25A0;
+     margin-bottom: 50px;
  }
  .featured-heading{
    width: 580px;
@@ -38,7 +40,7 @@
    padding: 15px;
    width: 150px;
    position: relative;
-   bottom: 35px;
+   /* bottom: 35px; */
    border: none;
  }
  .fa-arrow-right{
@@ -62,9 +64,49 @@
   .featured-image img{
     width: 100%;
     left: auto;
-  }
-  .featured-heading h1{
-    font-size: 40px;
-    width: 100%;
-  }    
+  } 
+}
+/*----------------
+  Middle Section
+-----------------*/
+.middle-section{
+  margin-bottom: 120px;
+}
+.blogs{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  margin-left: 250px;
+  grid-row-gap: 30px
+}
+.blog{
+  width: 330px;
+  height: 474px;
+  padding: 15px;
+  box-shadow: 1px 1px 10px rgb(238 234 234);
+}
+.blog img{
+  width: 330px;
+  height: 256px;
+}
+/*---------------------------
+   Footer Featured Section 
+----------------------------*/
+.footer-teature{
+  display: flex;
+}
+.footer-featured-image img{
+  position: relative;
+  width: 700px;
+  height: 550px;
+  left: 520px;
+}
+.footer-featured-heading{
+  width: 469px;
+  height: 309px;
+  position: relative;
+  left: 300px;
+  bottom: -90px;
+}
+.footer-featured-heading h1{
+  font-size: 50px;
 }
