--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,6 @@
    padding: 15px;
    width: 150px;
    position: relative;
-   /* bottom: 35px; */
    border: none;
  }
  .fa-arrow-right{
@@ -123,11 +122,15 @@
   .featured-heading{
     top: 0px;
     left: 0px;
+    width: 0px;
     height: 400px;
+    font-size: 50px;
   }
   .featured-image img{
     width: 100%;
     left: auto;
+    top: 160px;
+    left: 40px;
   } 
 }
 @media only screen and (min-width:481px) and (max-width:768px) {
@@ -142,5 +145,20 @@
     width: 100%;
     left: 0px;
     top: 200px
+  }
+}
+/*------------------------------- 
+    Middle Section Responsive
+ --------------------------------*/
+ @media only screen and (max-width:480px) {
+  .blogs{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+  }
+}
+@media only screen and (min-width:481px) and (max-width:768px){
+  .blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
   }
 }
