--- a/styles/style.css
+++ b/styles/style.css
@@ -97,6 +97,27 @@
 .footer-featured-heading h1{
   font-size: 50px;
 }
+/*-----------------
+   Extra 1 Section
+   ---------------*/
+   .news-this-week{
+     margin-bottom: 150px;
+   }
+   .shadow{
+    box-shadow: 10px 10px 30px gray;
+    padding: 50px;
+    border-radius: 20px;
+    margin-left: 50px;
+    margin-right: 20px;
+}
+   .box-news{
+     display: flex;
+   }
+   .box-news img{
+    width: 40%;
+    height: 300px;
+    border-radius: 5px;
+}
 /*--------------- 
   Footer Section
 ----------------- */
@@ -109,8 +130,11 @@
   width: 484px;
   height: 110px;
   position: relative;
-  left: 65px;
+  left: 18px;
   top: -60px;
+}
+.copy-text{
+  text-align: center;
 }
 /*------------------------------- 
     Featured Section Responsive
