--- a/styles/style.css
+++ b/styles/style.css
@@ -244,3 +244,16 @@
     text-align: center;
   }
  }
+ /*------------------------------- 
+    Extra 1 Section Responsive
+ --------------------------------*/
+ @media only screen and (max-width:480px){
+   .box-news{
+    flex-direction: column
+   }
+ }
+ @media only screen and (min-width:481px) and (max-width:768px){
+  .box-news{
+    flex-wrap: wrap;
+  }
+ }
